# htmrl

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENT_WEBSOCKET_SERVER.md  DOCSTRING_GUIDE.md  Makefile  README.md  episode_rewards.json  episode_rewards_CartPole-v1.json  episode_rewards_FrozenLake-v1.json  episode_rewards_LunarLander-v3.json  episode_rewards_MountainCar-v0.json  episode_rewards_Pendulum-v1.json  episode_rewards_TradingEnv.json  lint.sh  pyproject.toml  pytest.ini  requirements.txt  run_agent_server.py  sf_completion_report.md  sonar-project.properties  test_state_colors.py  {}.tmp
.github/: pull_request_template.md
.github/instructions/: sonarqube_mcp.instructions.md
.github/workflows/: ci.yaml
archive/: fft_encoder.bak  htmrlenv.yaml
archive/Cartpole/: environment-tensorflow.yml
archive/old/: input_handler_stub.py  old_input_handler.py  random_distributed_scalar_encoder.py
data/: easyData.xlsx  fin_test.csv  hot_gym_short.csv  nyc_taxi.csv  rec-center-hourly.csv  rec_center.csv  test.csv  test1.csv
docs/: appendix_te_tc_addendum.md  delegation_pattern_evidence.md  delegation_pattern_examples.md  design_pattern_audit.md  design_patterns.md  factory_pattern_evidence.md  factory_pattern_examples.md  final_report_4_0_test_inventory.md  index.html  marker_pattern_evidence.md  marker_pattern_examples.md  post_project_reflection_report_2_6_2_7.md  psu_capstone.html  recent_test_commit_report.md  search.js  singleton_pattern_evidence.md  singleton_pattern_examples.md  strategy_pattern_evidence.md  strategy_pattern_examples.md  test_audit_ts_tc_report.csv  test_audit_ts_tc_report.md  test_reports_latest_consolidated.md
docs/psu_capstone/: agent_layer.html  encoder_layer.html  environment.html  input_layer.html  log.html  play_ground.html  sdr_layer.html
docs/puml/: AgentChain.puml  act-01-input-tools.puml  act-02-encoder-tools.puml  act-03-build-train-brain.puml  act-04-brain-inference.puml  agent_layer_detailed.puml  brain_env_training_activity.puml  classes_psu_capstone.puml  data_flow.puml  design_patterns.puml  dev_toolchain_activity.puml  packages_psu_capstone.puml  project_architecture.puml  puml.txt
docs/reports/: pr_report.md  sf_completion_report.md  sine_wave_training_stats.txt
frontend/: GymTrading.ts  LunarLander.ts  cartpole.ts  frozenlake.ts  mountaincar.ts  pendulum.ts
render_logs/: BTCUSD_2026-04-20_19-18-11.pkl  BTCUSD_2026-04-20_19-18-12.pkl  BTCUSD_2026-04-20_19-18-17.pkl  BTCUSD_2026-04-20_19-18-20.pkl  BTCUSD_2026-04-20_19-18-22.pkl  BTCUSD_2026-04-20_19-20-28.pkl  BTCUSD_2026-04-20_19-25-48.pkl  BTCUSD_2026-04-20_19-27-32.pkl  BTCUSD_2026-04-20_19-29-17.pkl  BTCUSD_2026-04-20_19-31-04.pkl  BTCUSD_2026-04-20_19-32-57.pkl  BTCUSD_2026-04-21_14-10-38.pkl  BTCUSD_2026-04-21_14-10-39.pkl  BTCUSD_2026-04-21_14-10-40.pkl  BTCUSD_2026-04-21_14-10-41.pkl  BTCUSD_2026-04-21_14-10-42.pkl  BTCUSD_2026-04-21_14-12-46.pkl  BTCUSD_2026-04-21_14-12-47.pkl  BTCUSD_2026-04-21_14-12-48.pkl  BTCUSD_2026-04-21_14-12-49.pkl  BTCUSD_2026-04-21_14-12-50.pkl  BTCUSD_2026-04-21_14-59-00.pkl  BTCUSD_2026-04-21_15-49-50.pkl  BTCUSD_2026-04-21_15-49-51.pkl  BTCUSD_2026-04-21_15-49-52.pkl  BTCUSD_2026-04-21_15-49-53.pkl  BTCUSD_2026-04-21_15-49-54.pkl  BTCUSD_2026-04-21_15-51-14.pkl
reports/: my_htm_layer_smoke.json  my_htm_results.json  my_htm_smoke.json  pr-history-from-59.md
reports/research_demo/: summary.json
scripts/: check_test_commit_annotations.py  encoder_types.py  generate_test_audit_report.py  plot_rewards.py  render_trading.py  research_pipeline_demo.py  run_all_envs.py  setup-zscaler-certs.sh
src/: batch_encoder_handler_driver.py  code_level_test.py  demo_driver.py  demo_driver2.py  frozen_lake.py  grapher.py  hashing.py  manual_test.py  utils.py
src/core/: sungur.py
src/encoder_layer/: base_encoder.py  category.py  rdse.py  scalar_encoder.py
src/htmrl/: __init__.py  grapher.py  log.py  utils.py
src/legacy/: batch_encoder_handler_driver.py  encoder_handler.py
src/psu_capstone/: __init__.py  log.py  play_ground.py  utils.py
src/psu_capstone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/visualizer/: app.py  brain_renderer.py  connection_renderer.py  history.py
tests/: config_test.py  conftest.py  test_agent.py  test_agent_server.py  test_base_encoder.py  test_brain_training_env.py  test_cartpole_brain_training.py  test_column_field.py  test_decoder_category.py  test_decoder_coordinate.py  test_decoder_date.py  test_decoder_geospatial.py  test_decoder_rdse.py  test_demo_driver_full_demo.py  test_demo_driver_integration.py  test_encoder_batch_handler.py  test_encoder_category.py  test_encoder_category_new.py  test_encoder_coordinate.py  test_encoder_date.py  test_encoder_date_rdse.py  test_encoder_delta.py  test_encoder_factor.py  test_encoder_fourier.py  test_encoder_geospatial.py  test_encoder_handler_suite.py  test_encoder_parameter_marker.py  test_encoder_rdse.py  test_encoder_scalar.py  test_encoder_to_htm.py  test_env_adapter.py  test_fin_gym.py  test_htm.py  test_htm_brain.py  test_htm_cell.py  test_htm_column.py  test_htm_core_python_bindings_spatial_pooler.py  test_htm_input_field.py  test_htm_output_field.py  test_htm_segments.py  (+9 more)
tests/integration/: test_encoder_htm_integration.py  test_encoder_input_integration.py  test_encoder_to_htm.py  test_ih.py  (+2 more)
user/: my_fin_pipeline.py  my_htm.py
(+239 files in other folders)
