[project]
name = "psu-capstone"
version = "0.0.1"
authors = [
    { name = "PSU Capstone Team" },
]
description = "PSU Capstone Project"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.26.4",
  "sympy>=1.11",
  "openpyxl>=3.1.2",
  "pandas>=2.2.2",
  "mmh3>=3.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.7.2",
  "xlrd>=2.0.2",
  "pyproj>=3.7.1",
  "scipy>=1.15.3",
  "tqdm>=4.67.3",
  "gymnasium>=1.2.3",
  "stable-baselines3>=2.7.1",
  "pygame>=2.6.1",
  "websockets>=16.0",
  "gym-trading-env>=0.3.5",
  "swig>=4.4.1",
  "box2d>=2.3.10",
    "pydocstyle>=6.3.0",
    "interrogate>=1.7.0",
    "pydoclint>=0.5.0",
]
formatters = ["black>=23.7.0", "isort>=6.0.1"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# package = true  # Disabled for offline environments


[tool.uv.workspace]
members = [
    "try-scipy",
]

###############
#### Tests ####
###############

[tool.pytest.ini_options]
addopts = "-s"
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
norecursedirs = ["build"]

[tool.coverage.run]
omit = [
  # omit anything in a .local directory anywhere
  "*/.local/*",
  "*/__init__.py",
  "tests/*",
  "*/tests/*",
  ".venv/*",
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
  "def __init__*",
  "def __",
  "@abstractmethod",
  "pragma: no cover",
]

############################
### Linters & Formatters ###
############################
[tool.black]
line-length = 100
extend-exclude = '''
(
  # Exclude template directories
  # Standard exclusions
  \.git
  | \.venv
  | build
  | dist
)
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.flake8]
max-line-length = 100
ignore = ["E501", "F401", "W503", "E203", "C901", "N803"]
exclude = [
  ".venv",
  ".git",
  ".github",
  "__pycache__",
  "build",
  "dist",
  "experiments",
  "examples",
  "docs",
  ".vscode",
]

############################
### Docstring Checking #####
############################

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D105", "D107"]
match = "(?!test_).*\\.py"
match-dir = "^(?!(\\.venv|build|dist|tests|__pycache__|\\.))"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
fail-under = 80
exclude = ["tests", ".venv", "build", "dist", "docs"]
verbose = 1
quiet = false
color = true

[tool.pydoclint]
style = "google"
exclude = '\.venv|build|dist|tests'
require-return-section-when-returning-nothing = false
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
